--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.1",
+    "@types/shortid": "^0.0.29",
     "all-contributors-cli": "^6.14.1",
     "colors": "^1.4.0",
     "commitizen": "^4.0.4",
@@ -117,5 +119,9 @@
     "tslint-config-standard": "^9.0.0",
     "typedoc": "^0.17.4",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "shortid": "^2.2.15"
   }
 }
