--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged",
+    "precommit": "lint-staged && yarn lint",
     "travis-deploy-once": "travis-deploy-once"
   },
   "lint-staged": {
@@ -57,6 +57,7 @@
       "js"
     ],
     "coveragePathIgnorePatterns": [
+      "rimo.ts",
       "/node_modules/",
       "/test/"
     ],
