--- a/package.json
+++ b/package.json
@@ -59,6 +59,11 @@
       "tsx",
       "js"
     ],
+    "moduleNameMapper": {
+      "^@rimo/(.*)": [
+        "<rootDir>/src/$1"
+      ]
+    },
     "coveragePathIgnorePatterns": [
       "rimo.ts",
       "/node_modules/",
@@ -73,7 +78,7 @@
       }
     },
     "collectCoverageFrom": [
-      "src/*.{js,ts}"
+      "src/**/*.{js,ts}"
     ]
   },
   "prettier": {
@@ -102,6 +107,7 @@
     "jest": "^25.3.0",
     "jest-config": "^25.3.0",
     "lint-staged": "^10.1.3",
+    "lodash": "^4.17.15",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^2.0.4",
     "prompt": "^1.0.0",
@@ -112,9 +118,11 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.5.0",
+    "rollup-plugin-ts-paths": "^1.0.5",
     "rollup-plugin-typescript2": "^0.27.0",
     "semantic-release": "^17.0.4",
     "shelljs": "^0.8.3",
+    "shortid": "^2.2.15",
     "travis-deploy-once": "^5.0.11",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.8.2",
@@ -124,8 +132,5 @@
     "typedoc": "^0.17.4",
     "typescript": "^3.8.3"
   },
-  "dependencies": {
-    "lodash": "^4.17.15",
-    "shortid": "^2.2.15"
-  }
+  "dependencies": {}
 }
