--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,12 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "baseUrl": ".",
+    "paths": {
+      "@rimo/*": ["src/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src", "test"],
+  "exclude": ["node_modules"]
 }
