--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "rimo",
   "version": "0.0.0",
   "description": "",
-  "keywords": [],
+  "keywords": [
+    "rimo",
+    "domain",
+    "clean architecture",
+    "ddd"
+  ],
   "main": "dist/rimo.umd.js",
   "module": "dist/rimo.es5.js",
-  "typings": "dist/types/rimo.d.ts",
+  "typings": "dist/src/rimo.d.ts",
   "files": [
     "dist"
   ],
@@ -64,6 +69,7 @@
         "<rootDir>/src/$1"
       ]
     },
+    "modulePathIgnorePatterns": ["<rootDir>/dist"],
     "coveragePathIgnorePatterns": [
       "rimo.ts",
       "/node_modules/",
@@ -98,6 +104,7 @@
     "@types/node": "^13.11.1",
     "@types/shortid": "^0.0.29",
     "all-contributors-cli": "^6.14.1",
+    "class-validator": "^0.11.1",
     "colors": "^1.4.0",
     "commitizen": "^4.0.4",
     "coveralls": "^3.0.11",
@@ -129,8 +136,11 @@
     "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
+    "ttypescript": "^1.5.10",
+    "type-fest": "^0.13.1",
     "typedoc": "^0.17.4",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "typescript-transform-paths": "^1.1.14"
   },
   "dependencies": {}
 }
