--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
         "<rootDir>/src/$1"
       ]
     },
-    "modulePathIgnorePatterns": ["<rootDir>/dist"],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist",
+      "<rootDir>/examples"
+    ],
     "coveragePathIgnorePatterns": [
       "rimo.ts",
       "/node_modules/",
