--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -15,12 +15,11 @@
     "class-transformer-validator": "^0.8.0",
     "class-validator": "^0.11.1",
     "inversify": "^5.0.1",
-    "lodash": "^4.17.15",
     "knex": "^0.20.13",
+    "lodash": "^4.17.15",
     "reflect-metadata": "^0.1.13",
     "rimo": "latest",
-    "sqlite3": "^4.1.1",
-    "ts-node": "^8.8.2"
+    "sqlite3": "^4.1.1"
   },
   "license": "ISC",
   "devDependencies": {
@@ -28,13 +27,15 @@
     "@types/hapi__hapi": "^19.0.2",
     "@types/hapi__joi": "^16.0.12",
     "@types/jest": "^25.2.1",
-    "@types/lodash": "^4.14.149",
     "@types/knex": "^0.16.1",
+    "@types/lodash": "^4.14.149",
+    "@types/speakingurl": "^13.0.2",
     "jest": "^25.3.0",
     "jest-config": "^25.3.0",
-    "typescript": "^3.8.3",
     "ts-jest": "^25.3.1",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "ts-node": "^8.8.2",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
   },
   "jest": {
     "setupFiles": [
