--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.15",
     "reflect-metadata": "^0.1.13",
     "rimo": "latest",
+    "speakingurl": "^14.0.1",
     "sqlite3": "^4.1.1"
   },
   "license": "ISC",
@@ -52,7 +53,7 @@
       "js"
     ],
     "coveragePathIgnorePatterns": [
-      "/node_modules/",
+      "/src/index.ts/",
       "/test/"
     ],
     "coverageThreshold": {
