--- a/package.json
+++ b/package.json
@@ -105,7 +105,6 @@
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.1",
-    "@types/shortid": "^0.0.29",
     "all-contributors-cli": "^6.14.1",
     "class-validator": "^0.12.1",
     "colors": "^1.4.0",
@@ -119,6 +118,7 @@
     "lint-staged": "^10.1.3",
     "lodash": "^4.17.15",
     "lodash.camelcase": "^4.3.0",
+    "nanoid": "^3.1.3",
     "prettier": "^2.0.4",
     "prompt": "^1.0.0",
     "replace-in-file": "^5.0.2",
@@ -126,13 +126,13 @@
     "rollup": "^2.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-ts-paths": "^1.0.5",
     "rollup-plugin-typescript2": "^0.27.0",
     "semantic-release": "^17.0.4",
     "shelljs": "^0.8.3",
-    "shortid": "^2.2.15",
     "travis-deploy-once": "^5.0.11",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.8.2",
